# Physical_AI_Humanoid_Robotics_Book_With_RAG_Chatbot

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  GLOBAL_CONSISTENCY_REPORT.md  HUGGINGFACE_DEPLOYMENT.md  README.md  __init__.py  debug-chatkit-detailed-test.js  debug-chatkit-test.js  google_embeddings_api_docs.md  index.html  package-lock.json  plan.md  sitemap.xml  specification.md  tasks.md  validation.md
rag_chatbot/: .dockerignore  .env.example  .gitignore  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  Procfile  app.py  minimal_test.py  pyproject.toml  render.yaml  requirements.txt  space.yaml  startup_hf.py  test_intelligence_service.py
rag_chatbot/agents_sdk/: __init__.py  config.py  test_pipeline.py
rag_chatbot/agents_sdk/prompts/: __init__.py  prompt_templates.py
rag_chatbot/agents_sdk/services/: intelligence_service.py
rag_chatbot/backend/: README.md  main.py  simple_test.py  test_backend_integration.py
rag_chatbot/backend/middleware/: __init__.py  cors.py  logging.py  rate_limit.py
rag_chatbot/backend/routers/: __init__.py  chat.py  config.py  embed.py  health.py  retrieve.py
rag_chatbot/backend/routes/: health.py
rag_chatbot/backend/schemas/: chat.py  embedding.py  error.py  retrieval.py
rag_chatbot/backend/services/: embedding_service.py  rag_service.py  retrieval_service.py  streaming_service.py
rag_chatbot/backend/utils/: logger.py
rag_chatbot/chatkit/: PortalManager.jsx  README.md  SafeChatKitProvider.jsx  index.d.ts  index.js  package.json
rag_chatbot/chatkit/components/: ChatInputBar.css  ChatInputBar.jsx  ChatLauncherButton.css  ChatLauncherButton.jsx  ChatMessageBubble.css  ChatMessageBubble.jsx  ChatMessageList.css  ChatMessageList.jsx  ChatPanel.css  ChatPanel.jsx  ErrorBubble.css  ErrorBubble.jsx  MarkdownRenderer.css  MarkdownRenderer.jsx  MobileChatDrawer.css  MobileChatDrawer.jsx  SelectionTooltip.css  SelectionTooltip.jsx
rag_chatbot/chatkit/config/: api.js
rag_chatbot/chatkit/contexts/: ChatConversationContext.jsx  ChatUIContext.jsx
rag_chatbot/chatkit/hooks/: useChatMessages.js  useChatUI.js  useStream.js
rag_chatbot/chatkit/providers/: ChatKitProvider.jsx
rag_chatbot/chatkit/services/: chatService.js  streamingHandlers.js
rag_chatbot/chatkit/styles/: animations.css  breakpoints.css  theme.css  (+1 more)
rag_chatbot/databases/: README.md  __init__.py  database_manager.py  setup_database.py
rag_chatbot/docs/: global_architecture.md
rag_chatbot/embedding_pipeline/: .env.example  README.md  __init__.py  base_classes.py  chunking_engine.py  config.py  database.py  file_processor.py  gemini_client.py  main.py  pipeline.py  reembedding.py  text_preprocessor.py  url_crawler.py
rag_chatbot/fastapi_backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
rag_chatbot/rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rag_chatbot/shared/: config.py
(+908 files in other folders)
