[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot-fastapi-backend"
version = "1.0.0"
description = "FastAPI Backend Subsystem for Global RAG Chatbot System"
authors = [
    {name = "RAG Chatbot Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "qdrant-client>=1.7.0",
    "asyncpg>=0.29.0",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "requests>=2.31.0",
    "google-generativeai>=0.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_backend*"]

[project.urls]
Homepage = "https://github.com/your-organization/rag-chatbot"
Repository = "https://github.com/your-organization/rag-chatbot"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]